# rust-dictionary-autocomplete-autosuggest

./: Cargo.toml  README.md
src/: dictionary.rs  lib.rs  main.rs
